trocado bermuda para calça jeans

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <td>Em estoque</td>
         </tr>
         <tr>
-            <td>bermuda</td>
+            <td>calça jeans</td>
             <td>laranja</td>
             <td>P</td>
             <td>R$ 160,00</td>
