--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </tr>
         <tr>
             <td>calça jeans</td>
-            <td>laranja</td>
+            <td>azul</td>
             <td>P</td>
             <td>R$ 160,00</td>
             <td>Esgotado</td>
