--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </tr>
         <tr>
             <td>Camiste</td>
-            <td>Preta</td>
+            <td>azul</td>
             <td>M</Main></td>
             <td>R$ 70,00</td>
             <td>Em estoque</td>
